--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Team s/0 :<br>
 <div id="example3">
 <font color="gold">
 	RANSXM - CRVSH - ALEAH. - JAI - AIM - 0X -
-	YUQI - SEPH - JANA - HOLY - PAT - XOMI - TYLERS - MIGUELA - GABAY - PABLO - ROCKY
+	YUQI - SEPH - JANA - HOLY - SACHI - PAT - XOMI - TYLERS - MIGUELA - GABAY - PABLO - ROCKY
 
 </font>
 </div>
